[tool.poetry]
name = "aoc2019"
version = "0.1.0"
description = ""
authors = ["Stanislav Geidl <standag@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
